--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
         <nav class="flex justify-between shadow-md pb-4">
             <div class="ml-12 text-3xl italic text-gray-400 font-bold">logo here</div>
-            <ul class="flex space-x-5 text-2xl  mr-12 text-gray-400">
+            <ul class="flex flex-wrap space-x-5 text-2xl  mr-12 text-gray-400">
                 <l1><a  class="hover:text-yellow-600" href="#Home">Home</a></l1>
                  <l1><a  class="hover:text-yellow-600" href="#About">About</a></l1>
                 <l1><a  class="hover:text-yellow-600" href="#Contact">Contact</a></l1>
